wip: create changelog

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -31,13 +31,61 @@ This release contains lots of important upgrades, from developer experience, to 
  - throw 400 when domain can't be mapped to a tenant
  - MT system with just 1 tenant doesn't require a custom domain!
 
-## Project Architecture
- - simpler folder structure and far less files
- - faster build and deploy times
- - less to maintain and easier to upgrade
- - all apps grouped under `apps/` folder
- - abstracted away babel configs for node and react
+## Brand New Project Setup
 
+With this release, we're introducing a brand new project setup! 
+
+By essentially removing all of the unnecessary files and folders included in every Webiny project, we believe this new setup will be a huge step forward in making Webiny as easy to use and understand as possible! 
+
+The following are some of the more import changes the new setup brings.
+
+### Removed Unnecessary Files and Folders
+
+Prior to this release, once a new Webiny project has been created, users would immediately be presented (or intimidated) with a lot of different folders and files. For example, if we were to look into the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder, we would be able to find five different folders which contain application code for 14 different AWS Lambda functions. Together, these functions form Webiny's GraphQL APIs.
+
+And while this approach does give users the ability to customize every aspect of Webiny, in practice, we've seen the vast majority of these are not really something user's are concerned with. When talking about the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder, almost always, the only two folders in which users are making some changes are [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/graphql) and [`api/code/headlessCms`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/headlessCms).
+
+<Alert type="info" title="Project Applications">
+
+The [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/graphql) and [`api/code/headlessCms`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/headlessCms) folders contain code for the two GraphQL APIs - the Main GraphQL API and the [Headless CMS GraphQL API](/docs/headless-cms/basics/using-graphql-api).
+
+</Alert>
+
+With this, and a couple of other use cases mind, we've decided to drastically cut down on the total number of files and folders that are included in every Webiny project. This includes:
+
+1. instead of 14, the `api` folder now includes only 2 AWS Lambda functions: Main GraphQL API and Headless CMS GraphQL API
+2. we've removed `code` folders that were located in [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api), [`apps/admin`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/admin) and [`apps/website`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/website) folders as they were redundant and causing unnecessary nesting of folders
+3. Pulumi infrastructure code is now also abstracted away from users (more on this in the following section) 
+4. the [`babel.node.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.node.js) and [`babel.react.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.react.js) Babel configuration files were also removed from the project 
+
+### Faster API Deployments
+
+With the changes listed in the [Removed Unnecessary Files and Folders](/docs/release-notes/5.29.0/changelog#removed-unnecessary-files-and-folders) section in mind, one might ask themselves:
+ 
+> If there are only 2 AWS Lambda functions in my project now, what happened to other 12? Do they still exist?
+
+Well, these function still do exist, but they are actually prebuilt for users' projects. This means that, upon deploying the [API project application](/docs/architecture/api/introduction), users do not need to build these functions themselves. In other words, this means much faster deployment times! 
+
+To be more precise, you can expect a **~70%** reduction in time it takes to build the API project application and a **~50%** reduction in time it takes to deploy it. 
+
+### `api` Folder (Project Application) Moved To `apps` Folder
+
+Previously, the `api` folder (which contains the API project application) was located in the project root. This is no longer the case. All project applications are now located in the [`apps`](https://github.com/webiny/webiny-js/tree/v5/apps) folder.  
+
+<Alert type="info" title="Project Applications">
+
+Learn more about project applications and project organization in general, in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
+
+</Alert>
+
+
+### Moved all Divided API Project Applications Into Core and API
+
+
+### Pulumi Infrastructure Code Replaced With Pulumi Apps
+ 
+### Easier Maintenance and Upgrades
+ 
 
 ## Security
 
