docs: new project setup notes

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -35,15 +35,27 @@ This release contains lots of important upgrades, from developer experience, to 
 
 With this release, we're introducing a brand new project setup! 
 
-By essentially removing all of the unnecessary files and folders included in every Webiny project, we believe this new setup will be a huge step forward in making Webiny as easy to use and understand as possible! 
+By essentially removing the unnecessary files and folders included in every Webiny project, we believe this new setup will be a huge step forward in making Webiny as easy to use and grasp as possible! 
 
 The following are some of the more import changes the new setup brings.
 
+<Alert type="warning" title="Can I Use This?">
+
+Before continuing, note that the new project setup is available only for newly created projects, created with Webiny version **5.29.0** or greater.
+
+</Alert>
+
+<Alert type="warning" title="Existing Projects">
+
+When it comes to existing Webiny projects, at the moment, there isn't an upgrade procedure that would perform the migration to the new setup. Existing Webiny projects will continue to work as usual.
+
+</Alert>
+
 ### Removed Unnecessary Files and Folders
 
-Prior to this release, once a new Webiny project has been created, users would immediately be presented (or intimidated) with a lot of different folders and files. For example, if we were to look into the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder, we would be able to find five different folders which contain application code for 14 different AWS Lambda functions. Together, these functions form Webiny's GraphQL APIs.
+Prior to this release, once a new Webiny project has been created, developers would immediately be presented (or intimidated) with a lot of different folders and files. For example, if we were to look into the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder ([the API project application](/docs/architecture/api/introduction)), we would be able to find five different folders which contain application code for 14 different AWS Lambda functions. Together, these functions form Webiny's GraphQL APIs.
 
-And while this approach does give users the ability to customize every aspect of Webiny, in practice, we've seen the vast majority of these are not really something user's are concerned with. When talking about the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder, almost always, the only two folders in which users are making some changes are [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/graphql) and [`api/code/headlessCms`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/headlessCms).
+And while this approach does give developers the ability to customize every aspect of Webiny, in practice, we've seen the vast majority of these are not really something developer's are concerned with. When talking about the [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code) folder, almost always, the only two folders in which developers are making some changes are [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/graphql) and [`api/code/headlessCms`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/code/headlessCms).
 
 <Alert type="info" title="Project Applications">
 
@@ -53,24 +65,26 @@ The [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.28.0/api/co
 
 With this, and a couple of other use cases mind, we've decided to drastically cut down on the total number of files and folders that are included in every Webiny project. This includes:
 
-1. instead of 14, the `api` folder now includes only 2 AWS Lambda functions: Main GraphQL API and Headless CMS GraphQL API
-2. we've removed `code` folders that were located in [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api), [`apps/admin`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/admin) and [`apps/website`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/website) folders as they were redundant and causing unnecessary nesting of folders
-3. Pulumi infrastructure code is now also abstracted away from users (more on this in the following section) 
-4. the [`babel.node.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.node.js) and [`babel.react.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.react.js) Babel configuration files were also removed from the project 
+1. Instead of 14, the `api` folder now includes only 2 AWS Lambda functions: Main GraphQL API and Headless CMS GraphQL API.
+2. We've removed `code` folders that were located in [`api`](https://github.com/webiny/webiny-js/tree/v5.28.0/api), [`apps/admin`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/admin) and [`apps/website`](https://github.com/webiny/webiny-js/tree/v5.28.0/apps/website) folders. They were simply redundant and causing unnecessary nesting of folders.
+3. Pulumi infrastructure code is now also abstracted away from developers (more on this in the [Pulumi Infrastructure Code Replaced With Pulumi Apps](/docs/release-notes/5.29.0/changelog#pulumi-infrastructure-code-replaced-with-pulumi-apps)).
+4. The [`babel.node.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.node.js) and [`babel.react.js`](https://github.com/webiny/webiny-js/blob/v5.28.0/.babel.react.js) Babel configuration files (located in project root) were also removed from the project.
 
-### Faster API Deployments
+### Faster Deployments
 
 With the changes listed in the [Removed Unnecessary Files and Folders](/docs/release-notes/5.29.0/changelog#removed-unnecessary-files-and-folders) section in mind, one might ask themselves:
  
-> If there are only 2 AWS Lambda functions in my project now, what happened to other 12? Do they still exist?
+> If there are only 2 AWS Lambda functions in my [API project application](/docs/architecture/api/introduction) now, what happened to other 12? Do they still exist?
 
-Well, these function still do exist, but they are actually prebuilt for users' projects. This means that, upon deploying the [API project application](/docs/architecture/api/introduction), users do not need to build these functions themselves. In other words, this means much faster deployment times! 
+Well, these functions still do exist, but, from now on, they will actually be prebuilt for developers' projects! 
 
-To be more precise, you can expect a **~70%** reduction in time it takes to build the API project application and a **~50%** reduction in time it takes to deploy it. 
+This means that, upon deploying the **API** project application, developers do not need to build (compile the application code) these functions themselves. In other words, much faster deployment times! 
 
-### `api` Folder (Project Application) Moved To `apps` Folder
+To be more precise, you can expect a **~70%** reduction in time it takes to build the **API** project application and a **~50%** reduction in time it takes to completely deploy it. 
 
-Previously, the `api` folder (which contains the API project application) was located in the project root. This is no longer the case. All project applications are now located in the [`apps`](https://github.com/webiny/webiny-js/tree/v5/apps) folder.  
+### API Project Application Moved To `apps` Folder
+
+Previously, the `api` folder ([the API project application](/docs/architecture/api/introduction)) was located in the project root. This is no longer the case. All project applications are now located in the [`apps`](https://github.com/webiny/webiny-js/tree/v5/apps) folder.  
 
 <Alert type="info" title="Project Applications">
 
@@ -79,15 +93,66 @@ Learn more about project applications and project organization in general, in th
 </Alert>
 
 
-### Moved all Divided API Project Applications Into Core and API
+### Introduced the New Core Project Application
 
+With this release, we are introducing the new [Core](https://github.com/webiny/webiny-js/tree/v5/apps/core) project application, whose main purpose is to define and encapsulate the stateful cloud infrastructure resources. These are your [Amazon DynamoDB](https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Introduction.html) and [Amazon Elasticsearch](https://aws.amazon.com/opensearch-service/) databases, [Amazon S3](https://aws.amazon.com/s3/) for storing files, and also [Amazon Cognito](https://aws.amazon.com/cognito/) developer pools for storing developer information.
+
+The [API project application](/docs/architecture/api/introduction) still exists, but, from now on, it strictly defines the stateless resources responsible for hosting your project's GraphQL APIs. These include [Amazon API Gateway](https://aws.amazon.com/api-gateway/), [Amazon Cloudfront](Front/latest/DeveloperGuide/Introduction.html), and multiple [AWS Lambda](https://aws.amazon.com/lambda/) functions.  
+  
+This new organization will enable us to create some really interesting features in the near future, so stay tuned for that!  
 
 ### Pulumi Infrastructure Code Replaced With Pulumi Apps
- 
+
+Another big feature we're introducing with this release are **Pulumi apps**! 
+
+The main purpose of a Pulumi app is to define and encapsulate Pulumi infrastructure code, and, equally important, have it easily shipped as part of every Webiny project, while still maintaining the full ability for the developer to perform further customizations to existing resources or even introduce new ones.
+
+Essentially, for new Webiny projects, this enabled us to replace multiple files and folders that contained Pulumi infrastructure code (`pulumi` folders) with a single import statement and a function call made within the already existing `webiny.application.ts` files. For example, if we were to look into the [`apps/website/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5/apps/website/webiny.application.ts) file, we'd be able to see the following:
+
+```ts
+/**
+ * For more information on the Website project application, please see:
+ * https://www.webiny.com/docs/key-topics/cloud-infrastructure/website/introduction
+ */
+
+import { createWebsiteApp } from "@webiny/serverless-cms-aws";
+
+export default createWebsiteApp();
+```
+
+Apart from ensuring our **Website** project application is deployed correctly, the `createWebsiteApp` function also exposes the `pulumi` parameter, which, as mentioned, enables us to perform further customizations to existing cloud infrastructure resources or even introduce new ones. For example, with the following code, we're updating the description of the Cloudfront distribution that's deployed as part of the Website project application:     
+
+```ts
+/**
+ * For more information on the Website project application, please see:
+ * https://www.webiny.com/docs/key-topics/cloud-infrastructure/website/introduction
+ */
+
+import { createWebsiteApp } from "@webiny/serverless-cms-aws";
+
+export default createWebsiteApp({
+  pulumi: (app) => {
+    app.resources.delivery.cloudfront.config.comment(
+      "Let's update the distribution's description..."
+    );
+  }
+});
+
+```
+
+Finally, what about TypeScript support? Well, we're glad to report that full TypeScript support is included! With the help of a modern code editor, developers should be able to easily see all of the cloud infrastructure resources (and respective configuration parameters) that are included in the underlying Pulumi app. 
+
 ### Easier Maintenance and Upgrades
- 
+
+Last but not least...
+
+As mentioned at the beginning, we believe the new project setup will be a huge step forward in making Webiny as easy to use and grasp as possible. But that's not all!
+
+The fact that the vast majority of the application and infrastructure code has now been abstracted away from developers also brings extra benefits in terms of maintenance and project upgrades. 
+
+Ultimately, what this means is that, in the future, users can expect much less complex project upgrade procedures and faster bug fixes from the Webiny team! 
 
 ## Security
 
-### disable auth when loading your own user ([#2489](https://github.com/webiny/webiny-js/pull/2489))
+### disable auth when loading your own developer ([#2489](https://github.com/webiny/webiny-js/pull/2489))
 ### add a loading overlay while loading identity ([#2490](https://github.com/webiny/webiny-js/pull/2490))
