docs: new project setup notes

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -33,11 +33,9 @@ This release contains lots of important upgrades, from developer experience, to 
 
 ## Brand New Project Setup
 
-With this release, we're introducing a brand new project setup! 
+With this release, we're introducing a brand new project setup, which, we believe, will be huge step forward in making Webiny as easy to grasp and use as possible! 
 
-By essentially removing the unnecessary files and folders included in every Webiny project, we believe this new setup will be a huge step forward in making Webiny as easy to use and grasp as possible! 
-
-The following are some of the more import changes the new setup brings.
+The following are the most import changes the new setup brings.
 
 <Alert type="warning" title="Can I Use This?">
 
@@ -144,7 +142,7 @@ Finally, what about TypeScript support? Well, we're glad to report that full Typ
 
 ### Easier Maintenance and Upgrades
 
-Last but not least...
+Last, but certainly not the least...
 
 As mentioned at the beginning, we believe the new project setup will be a huge step forward in making Webiny as easy to use and grasp as possible. But that's not all!
 
