wip: improve tenancy bullet points

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -35,15 +35,19 @@ The internals of the Prerendering Service were rewritten to play nicer with para
  Regarding the programmatic usage of the Prerendering Service, it is now greatly simplified, and detached from any infrastructure-related information (like bucket names, Cloudfront distribution IDs, etc.). You simply specify paths to render, and can optionally tag your pages for custom logic. There's now also an ability to issue full website re-render, but exclude certain pages, if necessary.
 
   <Alert type="info" title="How does this affect my existing system?">
-    
     Your database records will be upgraded automatically upon the first deploy of your system to your AWS account.
-    
   </Alert>
 
 ### Tenant Routing in Multi-Tenant Systems
 
 Thanks to some of our users that run multi-tenant systems, we were able to get useful insights into various request handling flows, and improve tenant routing. The two most important improvements related to tenant routing are:
-1) Running a multi-tenant system, while only having the `root` tenant, will now properly route all requests _even without having a custom domain_ configured. A custom domain becomes mandatory only when you have more than 1 tenant in your system.
+
+1) Running a multi-tenant system, while only having the `root` tenant, will now properly route all requests _even without having a custom domain_ configured. 
+
+  <Alert type="info" title={"When do I need a custom domain?"}>
+    A custom domain is mandatory when having more than one tenant in your system.
+  </Alert>
+
 2) Tenant router will not return a `400 Bad Request` response if it's unable to map the request to one of the tenants. Previously, it let the request travel to the origin (the S3 bucket), which caused all kinds of confusion and difficult to understand behaviors.  
 
 ## Brand New Project Setup
